# stockvalue_backend

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md
stockvaluefinder/: .env   .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  SCAFFOLD_STATUS.md  TESTING_SUMMARY.md  docker-compose.yml  main.py  production.env.example  pyproject.toml  pytest.ini
stockvaluefinder/.specify/memory/: constitution.md
stockvaluefinder/alembic/: env.py
stockvaluefinder/alembic/versions/: 001_initial_schema.py  002_financial_risk_tables.py  003_yield_gap_tables.py  004_valuation_tables.py  006_add_narrative_columns.py  007_add_fscore_to_risk_scores.py  008_add_documents_table.py  3330cc06df7c_005_convert_calculated_at_to_timestamptz.py
stockvaluefinder/stockvaluefinder/: __init__.py  config.py  llm_config.py  llm_factory.py  main.py
stockvaluefinder/stockvaluefinder/agents/: __init__.py  coordinator_agent.py  risk_agent.py  yield_agent.py
stockvaluefinder/stockvaluefinder/api/: dependencies.py  documents_routes.py  risk_routes.py  stock_helpers.py  valuation_routes.py  yield_routes.py
stockvaluefinder/stockvaluefinder/db/: base.py
stockvaluefinder/stockvaluefinder/models/: __init__.py  api.py  dividend.py  document.py  enums.py  financial.py  narrative.py  rate.py  risk.py  stock.py  valuation.py  yield_gap.py
stockvaluefinder/stockvaluefinder/rag/: embeddings.py  pdf_processor.py  retriever.py  vector_store.py
stockvaluefinder/stockvaluefinder/repositories/: base.py  dividend_repo.py  document_repo.py  (+6 more)
stockvaluefinder/tests/: conftest.py
(+136 files in other folders)
