[project]
name = "stockvaluefinder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.14.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "efinance>=0.5.6",
    "fastapi>=0.133.1",
    "greenlet>=3.3.2",
    "httpx>=0.27.0",
    "hypothesis>=6.151.9",
    "langchain>=1.2.10",
    "langgraph>=1.0.9",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "qdrant-client>=1.17.0",
    "redis>=7.2.1",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.5.1",
]
